--- a/docker/toolbox/dockerfile
+++ b/docker/toolbox/dockerfile
@@ -1,4 +1,3 @@
 FROM alpine
-RUN apk add --no-cache curl wget busybox-extras netcat-openbsd python
-RUN apk --purge -v del py-pip
+RUN apk add --no-cache curl wget busybox-extras netcat-openbsd
 CMD tail -f /dev/null
